--- a/SGI/SGI.UI/Components/Pages/CerrarSesion.razor
+++ b/SGI/SGI.UI/Components/Pages/CerrarSesion.razor
@@ -18,7 +18,7 @@
         usuarioActual.Nombre = null;
         usuarioActual.Apellido = null;
         usuarioActual.Email = null;
-        usuarioActual.IdUsuario = null;
+        usuarioActual.IdUsuario = 0;
 
         // Redirigir al formulario de inicio de sesión
         Navigation.NavigateTo("/IniciarSesion");
