--- a/SGI/SGI.UI/Components/Pages/Home.razor
+++ b/SGI/SGI.UI/Components/Pages/Home.razor
@@ -12,7 +12,7 @@
     {
         <div class="bienvenida">
             <p class="mensaje-bienvenida">Bienvenido al Sistema de Gestión de Inventario!</p>
-            <p>Bienvenido, @usuarioActual.Nombre @usuarioActual.Apellido (@usuarioActual.Email)</p>
+            <p>BIENVENIDO @usuarioActual.Nombre.ToUpper() @usuarioActual.Apellido.ToUpper()</p>
         </div>
     }
     else
