--- a/SGI/SGI.UI/Components/Layout/NavMenu.razor
+++ b/SGI/SGI.UI/Components/Layout/NavMenu.razor
@@ -37,6 +37,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Transacciones">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Transacciones
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Gestiondeusuario">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> GestionDeUsuarios
             </NavLink>
