--- a/SGI/SGI.UI/Components/Pages/Transaccion.razor
+++ b/SGI/SGI.UI/Components/Pages/Transaccion.razor
@@ -3,6 +3,7 @@
 @inject DarAltaTransaccion TransaccionAlta
 @inject DarBajaTransaccion TransaccionBaja
 @inject NavigationManager Navigation
+@rendermode InteractiveServer
 
 <PageTitle>Gestión de Transacciones</PageTitle>
 
@@ -26,6 +27,7 @@
             <div class="elemento-input">
                 <label for="tipo">Tipo de Transacción:</label>
                 <select @bind="_tipoAlta">
+                    <option value="" disabled selected>Seleccione un tipo</option>
                     <option value="entrada">Entrada</option>
                     <option value="salida">Salida</option>
                 </select>
