Se agrego tener que agregar una categoria existente para poder dar alta de un producto. Se agrego que al dar de baja una categoria esta no tenga ningun producto asociado.

--- a/SGI/SGI.UI/Components/Pages/Categorias.razor
+++ b/SGI/SGI.UI/Components/Pages/Categorias.razor
@@ -159,9 +159,16 @@
 
     private void ejecutarBaja()
     {
+        try 
+        {
         categoriasBajas.validarBaja(idABuscar);
         mostrarFormularioModificar = false;
         Navigation.NavigateTo("/categorias");
+        }
+        catch (Exception ex)
+        {
+            mensajeDeError = ex.Message;
+        }
     }
 
     private void ejecutarAlta()
